--- a/playbooks/zip_logs_over_100m.yaml
+++ b/playbooks/zip_logs_over_100m.yaml
@@ -4,5 +4,5 @@
   become_method: sudo
   user: centos   
   tasks:
-  - name: run find command
-    shell: 'find /var/log -type f -name "*.log" -size +100M -exec gzip -v9   {}+'
+  - name: run find command ans
+    shell: 'find   /var/log   -type f   -name   "*.log"   -size   +100M   -exec  gzip -v9  {} +'
