--- a/playbooks/stop_services.yaml
+++ b/playbooks/stop_services.yaml
@@ -8,31 +8,31 @@
   tasks:
   - name: Stop r1soft on CentOS 7
     when: (ansible_distribution == "CentOS" and ansible_distribution_major_version == "7")
-    systemd: 
+    systemd:  
       name: sbm-agent
-      state: started
+      state: stopped
     ignore_errors: true
   - name: Stop r1soft on CentOS 6
     when: (ansible_distribution == "CentOS" and ansible_distribution_major_version == "6")
     service: 
       name: cdp-agent
-      state: started
+      state: stopped
     ignore_errors: true
   - name: Stop Filebeat
     when: (ansible_distribution == "CentOS" and ansible_distribution_major_version == "7")
     systemd: 
       name: filebeat
-      state: started
+      state: stopped
     ignore_errors: true
   - name: Stop NRPE
     when: (ansible_distribution == "CentOS" and ansible_distribution_major_version == "7")
     systemd: 
       name: nrpe
-      state: started
+      state: stopped
     ignore_errors: true
   - name: Stop Mariadb
     when: (ansible_distribution == "CentOS" and ansible_distribution_major_version == "7")
     systemd: 
       name: mariadb
-      state: started
+      state: stopped
     ignore_errors: true
