--- a/playbooks/start_services.yaml
+++ b/playbooks/start_services.yaml
@@ -1,45 +1,38 @@
+---
 - name: Starts Services
   hosts: all  #DB
   become: true
   become_method: sudo
   user: centos
-  ignore_errors: true
-  tasks: 
-  - name: stop r1soft  centos 7
-    when: (ansible_distribution == "CentOS" and ansible_distribution_version == "7")
-    systemd:
+  ignore_errors: true          #Dont stop if there are errors
+  tasks:
+  - name: Stop r1soft on CentOS 7
+    when: (ansible_distribution == "CentOS" and ansible_distribution_major_version == "7")
+    systemd: 
       name: sbm-agent
       state: started
     ignore_errors: true
-
-  - name: stop r1sof centos 6
-    when: (ansible_distribution == "CentOS" and ansible_distribution_version == "6")
-    syrvice:
+  - name: Stop r1soft on CentOS 6
+    when: (ansible_distribution == "CentOS" and ansible_distribution_major_version == "6")
+    service: 
       name: cdp-agent
       state: started
     ignore_errors: true
-
-  - name: stop filebeat
-    systemd:
+  - name: Stop Filebeat
+    when: (ansible_distribution == "CentOS" and ansible_distribution_major_version == "7")
+    systemd: 
       name: filebeat
       state: started
     ignore_errors: true
-
-
-  - name: stop NRPE
-    systemd:
+  - name: Stop NRPE
+    when: (ansible_distribution == "CentOS" and ansible_distribution_major_version == "7")
+    systemd: 
       name: nrpe
       state: started
     ignore_errors: true
-
-  - name: stop MAriadb
-    systemd:
+  - name: Stop Mariadb
+    when: (ansible_distribution == "CentOS" and ansible_distribution_major_version == "7")
+    systemd: 
       name: mariadb
       state: started
-    ignore_errors: true
-
- - name: stop r1soft
-    systemd:
-      name: sbm-agent
-      state: started    
     ignore_errors: true
