--- a/playbooks/install wordpress.yaml
+++ b/playbooks/install wordpress.yaml
@@ -1,44 +1,97 @@
-- name: My first playbook
-  hosts: all
-  become: true
-  become_method: sudo
-  user: centos
-  vars:
-    users:
-    - "bob"
-    - "ben"
-    - "lisa"
-    - "katty"
+---
+# tasks file for wordpress
+- name: install dependencies
+  package:
+    name:
+      - httpd 
+      - mariadb 
+      - mariadb-server 
+      - php 
+      - php-pdo_mysql 
+      - php-xml 
+      - php-gd 
+      - wget 
+      - nano
+      - policycoreutils-python
+      - MySQL-python
+    state: installed
 
-  tasks: 
-  - name: dependenices for wordpress
-    package:
-      name: 
-      - php
-      - php-mysql
-      - mariadb-server
-      - mariadb
-      status: installed
-      state: started
-      enabled: yes
+- name: create wordpress dir
+  file:
+    path: "/var/www/html/{{ beckinc.org }}"
+    state: directory
+    owner: apache
+    group: apache
+    mode: 0755
 
-  - name: creating users
-    user:
-      name: "{{ item }}"" 
-      state: present 
+- name: get wordpress
+  unarchive:
+    src: https://wordpress.org/latest.tar.gz
+    dest: /var/www/html/{{ beckinc.org }}
+    extra_opts: --strip=1
+    remote_src: yes
+    owner: apache
+    group: apache
+  notify: get API information
 
+- name: start mariadb
+  service:
+    name: mariadb
+    state: started
+    enabled: true
 
-  # - name: install http
-  #   package: 
-  #     name: httpd
-  #     state: installed
+- name: create database
+  mysql_db:
+    name: "wp_{{ beckinc.org }}_db"
+    state: present
 
-  # - name: install mariadb
-  #    package:
-  #      name: mysql
-  #      status: installed
+- name: create database user
+  mysql_user:
+    name: "{{ beck }}"
+    password: "{{ b200189k }}"
+    priv: '{{ wordpress }}.*:ALL,GRANT'
+  notify: secure mariadb
 
-  # - name: install mariadb-server
-  #     package: 
-  #       name: mariadb-server
-  #       status: installed    
+- name: run API handler now
+  meta: flush_handlers
+
+- name: set mariadb root password
+  mysql_user:
+    name: root
+    password: "{{ b200189k }}"
+
+- name: copy template
+  template:
+    src: wp-config.j2
+    dest: /var/www/html/{{ domain }}/wp-config.php
+
+- name: copy httpd template
+  template:
+    src: httpd.j2
+    dest: /etc/httpd/conf/httpd.conf
+    owner: root
+    group: root
+    mode: 0644
+
+- name: start httpd
+  service:
+    name: httpd
+    state: started
+    enabled: true
+
+- name: ensure firewalld is running
+  service:
+    name: firewalld
+    state: started
+    enabled: true
+
+- name: open firewall services
+  firewalld:
+    service: "{{ item }}"
+    permanent: true
+    state: enabled
+    immediate: true
+  with_items:
+    - https
+    - http
+handlers/main.yml:
