--- a/playbooks/install wordpress.yaml
+++ b/playbooks/install wordpress.yaml
@@ -1,5 +1,10 @@
 ---
 # tasks file for wordpress
+- name: My first playbook
+  hosts: all
+  become: true
+  become_method: sudo
+  user: centos
 - name: install dependencies
   package:
     name:
@@ -94,4 +99,3 @@
   with_items:
     - https
     - http
-handlers/main.yml:
