--- a/playbooks/install wordpress.yaml
+++ b/playbooks/install wordpress.yaml
@@ -14,7 +14,7 @@
   tasks:
   - name: creating users
     user:
-      name: "{{ item }}"
+      name: "{{ users }}"
       state: present 
 
   - name: install  dependencies
