--- a/playbooks/install wordpress copy.yaml
+++ b/playbooks/install wordpress copy.yaml
@@ -2,7 +2,7 @@
 # tasks file for wordpress
 
 name: install wordpress
-hosts: all
+hosts: 54.149.227.242
 become: true
 become_method: sudo
 user: centos
