--- a/playbooks/install_wordpress_copy.yaml
+++ b/playbooks/install_wordpress_copy.yaml
@@ -35,7 +35,7 @@
         - mariadb 
         - mariadb-server 
         - php 
-        - php-server
+        - php-mysql
         - wget 
       state: installed
 
