--- a/playbooks/install_wordpress_copy.yaml
+++ b/playbooks/install_wordpress_copy.yaml
@@ -72,12 +72,12 @@
     state: started
     enabled: true
 
-# - name: get wordpress
-#   unarchive:
-#     src: https://wordpress.org/latest.tar.gz
-#     dest: /var/www/html/
-#     extra_opts: --strip=1
-#     remote_src: yes
-#     owner: apache
-#     group: apache
+- name: get wordpress
+  unarchive:
+    src: https://wordpress.org/latest.tar.gz
+    dest: /var/www/html/
+    extra_opts: --strip=1
+    remote_src: yes
+    owner: apache
+    group: apache
 #  notify: get API information
