--- a/playbooks/install wordpress.yaml
+++ b/playbooks/install wordpress.yaml
@@ -1,113 +1,44 @@
 ---
-# tasks file for wordpress
-- name: My first playbook
-  hosts: all
-  become: true
-  become_method: sudo
-  user: centos
-  vars:
-    users:
-    - "bob"
-    - "ben"
-    - "lisa"
-    - "katty"
-  tasks:
-  - name: creating users
-    user:
-      name: "{{ users }}"
-      state: present 
-
-  - name: install  dependencies
-    package:
-      name:
-        - httpd 
-        - mariadb 
-        - mariadb-server 
-        - php 
-        - php-pdo_mysql 
-        - php-xml 
+- name: Install wordpress on CentOS 7 
+  gather_facts: no 
+  hosts: all       
+  tasks: 
+    - name: Install httpd
+      package: 
+        name: "{{ item }}"
+        state: latest
+      with_items:
+        - httpd
+        - php
+        - mariadb-server
+        - mysql
+        - elinks
+        - php-mysql
         - php-gd 
-        - wget 
-        - nano
-        - policycoreutils-python
-        - MySQL-python
-      state: installed
+      ignore_errors: yes 
 
-  - name: create wordpress dir
-    file:
-      path: "/var/www/html/{{ domain }}"
-      state: directory
-      owner: apache
-      group: apache
-      mode: 0755
+    - name: Download wordpress
+      get_url:
+        url: https://wordpress.org/latest.tar.gz 
+        dest: /tmp/
 
-  - name: get wordpress
-    unarchive:
-      src: https://wordpress.org/latest.tar.gz
-      dest: /var/www/html/{{ domain }}
-      extra_opts: --strip=1
-      remote_src: yes
-      owner: apache
-      group: apache
-    notify: get API information
+    - name: Unzip wordpress
+      unarchive: 
+        src: /tmp/wordpress-5.0.1.tar.gz
+        dest: /var/www/html/
+        remote_src: yes 
 
-  - name: start mariadb
-    service:
-      name: mariadb
-      state: started
-      enabled: true
+    - name: move files
+      shell: "mv /var/www/html/wordpress/*  /var/www/html/"
+      ignore_errors: yes 
 
-  - name: create database
-    mysql_db:
-      name: "wp_{{ domain }}_db"
-      state: present
+    - name: Move index.html 
+      shell: "mv /var/www/html/index.html /tmp/"
+      ignore_errors: true
 
-  - name: create database user
-    mysql_user:
-      name: "{{ beck }}"
-      password: "{{ b200189k }}"
-      priv: '{{ wordpress }}.*:ALL,GRANT'
-    notify: secure mariadb
-
-  - name: run API handler now
-    meta: flush_handlers
-
-  - name: set mariadb root password
-    mysql_user:
-      name: root
-      password: "{{ b200189k }}"
-
-  - name: copy template
-    template:
-      src: wp-config.j2
-      dest: /var/www/html/{{ domain }}/wp-config.php
-
-  - name: copy httpd template
-    template:
-      src: httpd.j2
-      dest: /etc/httpd/conf/httpd.conf
-      owner: root
-      group: root
-      mode: 0644
-
-  - name: start httpd
-    service:
-      name: httpd
-      state: started
-      enabled: true
-
-  - name: ensure firewalld is running
-    service:
-      name: firewalld
-      state: started
-      enabled: true
-
-  - name: open firewall services
-    firewalld:
-      service: "{{ item }}"
-      permanent: true
-      state: enabled
-      immediate: true
-    with_items:
-      - https
-      - http
+    - name: run apache 
+      systemd: 
+        name: httpd 
+        state: restarted 
+        enabled: yes 
+      ignore_errors: yes 
