--- a/playbooks/install wordpress.yaml
+++ b/playbooks/install wordpress.yaml
@@ -17,10 +17,20 @@
         - php-gd 
       ignore_errors: yes 
 
+    - name: add users
+      user: 
+        name: "{{ item }}"
+        state: present
+      with_items:
+        - bob
+        - ben
+        - lisa
+        - katty
+
     - name: Download wordpress
       get_url:
         url: https://wordpress.org/latest.tar.gz 
-        dest: ~/
+        dest: /home/centos/
 
     - name: Unzip wordpress
       unarchive: 
