--- a/playbooks/install wordpress.yaml
+++ b/playbooks/install wordpress.yaml
@@ -53,7 +53,7 @@
 
     - name: Unzip wordpress
       unarchive: 
-        src: ~/wordpress-5.4.tar.gz
+        src: /home/centos/wordpress-5.4.tar.gz
         dest: /var/www/html/
         remote_src: yes 
 
