--- a/playbooks/install wordpress.yaml
+++ b/playbooks/install wordpress.yaml
@@ -5,17 +5,23 @@
   become: true
   become_method: sudo
   user: centos  
-  tasks: 
-    - name:
-      shell: "yum -y install epel-release"
+  tasks:
 
-    - name: 
-      shell: "yum install http://rpms.remirepo.net/enterprise/remi-release-7.rpm -y"  
+    - name: Install remi repo.
+      yum:
+        name: http://rpms.famillecollet.com/enterprise/remi-release-{{ ansible_distribution_major_version }}.rpm
+        state: present
 
-    - name:
+    # - name: install epel-repo
+    #   shell: "yum -y install epel-release"
+
+    # - name: install remi repo 7
+    #   shell: "yum install http://rpms.remirepo.net/enterprise/remi-release-7.rpm -y"  
+
+    - name: enable remi-php72
       shell: "yum-config-manager --enable remi-php72"
 
-    - name:
+    - name: yum update
       shell: "yum update -y"   
 
 
