--- a/playbooks/install wordpress.yaml
+++ b/playbooks/install wordpress.yaml
@@ -12,18 +12,11 @@
         name: http://rpms.famillecollet.com/enterprise/remi-release-{{ ansible_distribution_major_version }}.rpm
         state: present
 
-    # - name: install epel-repo
-    #   shell: "yum -y install epel-release"
-
     # - name: install remi repo 7
-    #   shell: "yum install http://rpms.remirepo.net/enterprise/remi-release-7.rpm -y"  
+    #   shell: "yum install http://rpms.remirepo.net/enterprise/remi-release-7.rpm -y"   (this will get you the repo, but if its already installed will give an error) 
 
     - name: enable remi-php72
       shell: "yum-config-manager --enable remi-php72"
-
-    - name: yum update
-      shell: "yum update -y"   
-
 
 
     - name: Install httpd
