--- a/playbooks/route53addrecord.yaml
+++ b/playbooks/route53addrecord.yaml
@@ -1,6 +1,7 @@
 - name: add a record to route53
   hosts: localhost
   gather_facts: false
+  tasks:
     - route53:
       command: create
       zone: beckinc.org
