--- a/playbooks/provision_ec2.yaml
+++ b/playbooks/provision_ec2.yaml
@@ -45,3 +45,13 @@
                       keypair={{ keypair }}
                       count={{count}}
         register: ec2
+
+      - name: Add tag to Instance(s)
+        local_action: ec2_tag 
+                      resource={{ item.id }}
+                      region={{ region }}
+                      state=present
+        with_items: ec2.instances
+        args:
+          tags:
+            Name: webserver
