--- a/playbooks/startEC2s.yaml
+++ b/playbooks/startEC2s.yaml
@@ -15,6 +15,7 @@
         wait: True
         vpc_subnet_id: subnet-053fbc7822d68f7b5
         assign_public_ip: yes
+      ignore_errors: yes 
 
 - name: Start instances
   hosts: localhost
@@ -33,6 +34,7 @@
         wait: True
         vpc_subnet_id: subnet-051fe9935ce2da711
         assign_public_ip: yes
+      ignore_errors: yes 
 
 - name: Start instances
   hosts: localhost
@@ -51,6 +53,7 @@
         wait: True
         vpc_subnet_id: subnet-0a88ab271358aff61
         assign_public_ip: yes
+      ignore_errors: yes   
 
 
 - name: Start instances
@@ -70,3 +73,4 @@
         wait: True
         vpc_subnet_id: subnet-0641367729036bd85
         assign_public_ip: no
+      ignore_errors: yes 
