--- a/playbooks/NCPA.yaml
+++ b/playbooks/NCPA.yaml
@@ -5,7 +5,7 @@
   become_method: sudo
   user: centos
   ignore_errors: true
-  gather_facts: false
+  gather_facts: true
   tasks:
   - name: Setup a repo
     shell: rpm -Uvh http://repo.nagios.com/nagios/7/nagios-repo-7-4.el7.noarch.rpm
